2002-02-05  Per Bothner  <per@bothner.com>

	* NamedChildren.java:  Moved from gnu.xquery.util.
	* NodeType.java  Moved from gnu.xquery.util.
	* ElementType.java  Moved from gnu.xquery.util.
	* NamedDescendants.java:  New class, extends CpsProcedure.
	* Makefile.am:  Update accordingly.

	* NamedChildren.java:  Implement Externalizable.
	(writeExternal, readExternal):  New methods.

	* NamedChildren.java:  Implement GroupPredicate.
	(isInstance):  New methods, needed for GroupPredicate.
	(<init>):  New constructor.

	* package.html:  New file, for javadoc.

2002-01-29  Per Bothner  <per@bothner.com>

	* WriteTo.java (writeTo):  Disambiguate XMLPrinter constructor.

2002-01-23  Per Bothner  <per@bothner.com>

	* HttpPrinter.java (beginData):  New method.
	(beginGroup):  Call beginData.
	(writeObject):  New method, calls beginData.

2002-01-21  Per Bothner  <per@bothner.com>

	* Document.java:  Moved form gnu.xquery.util.
	(document):  Use ParsedXMLToConsumer.parse.  Remove 1 overload.
	* MakeUnescapedData.java: New class, extends Procedure1.
	* Makefile.am:  Update accordingly.

	* Document.java:  Moved from gnu.xquery.util.

2002-01-19  Per Bothner  <per@bothner.com>

	* Write.java:  Moved from gnu.kawa.functions.
	* Makefile.am:  Update accordingly.

2002-01-13  Per Bothner  <per@bothner.com>

	* HttpPrinter.java:  New class, extends FilterConsumer,
	* MakeResponseHeader.java:  new class, extends CpsProcedure.
	* Makefile.am (java_sources):  Update accordingly.

2001-11-24  Jim White <jim@pagesmiths.com>

	* Attributes.java:  Fix/update 'package' declaration.

2001-11-24  Per Bothner  <per@bothner.com>

	* ElementConstructor.java (compile):  Use compileWithPosition.

	* NamespaceEnv.java (get):  Recognize ':name' as no namespace.

2001-11-18  Per Bothner  <per@bothner.com>

	* DefineNamespace.java:  New class, moved and renamed from
	kawa.standard.define_namespace.

2001-11-12  Per Bothner  <per@bothner.com>
