@@ -1,3 +1,7 @@
+2002-02-13  Per Bothner  <per@bothner.com>
+
+	* ElementConstructor.java (apply): Check if body object is Consumable.
+
 2002-02-05  Per Bothner  <per@bothner.com>
 
 	* NamedChildren.java:  Moved from gnu.xquery.util.
